# AutoWatering

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Kconfig  LICENSE  PRODUCT_FEATURES.md  README.md  pm_static.yml  prj.conf  prj_backup.conf  prj_old.conf  sysbuild.conf  test.c
.github/: copilot-instructions.md
boards/: arduino_nano_33_ble.overlay  native_sim.overlay  promicro_52840.overlay  usb.overlay
docs/: BLUETOOTH.md  CHANGELOG.md  CONTRIBUTING.md  FAO56_FULL_EXPLANATION.md  FEATURES.md  FEATURES_FULL.md  HARDWARE.md  INSTALLATION.md  LOGICA_VERIFICARE.md  MASTER_VALVE_DEMO.md  PLANT_TYPES.md  README.md  SETTINGS_GUIDE.md  SOFTWARE.md  TECHNICAL_DEVELOPMENT_REPORT.md  TROUBLESHOOTING.md  documentation-audit-todo.md  plant-database-fao56-system.md  system-architecture.md
docs/ble/: README.md  troubleshooting.md
docs/ble-api/: FUTURE_FEATURES.md  IMPLEMENTATION_STATUS.md  README.md  fragmentation-guide.md  pack-service.md  protocol-specification.md  security-pairing.md
docs/ble-api/characteristics/: 03-system-status.md  05-schedule-configuration.md  06-system-configuration.md  10-alarm-status.md  12-history-management.md  14-growing-environment.md  15-auto-calc-status.md  16-current-task-status.md  17-timezone-configuration.md  18-rain-sensor-config.md  20-rain-history-control.md  21-onboarding-status.md  22-environmental-history.md  22-reset-control.md  23-compensation-status.md  23-environmental-data.md  24-environmental-history.md  24-onboarding-status.md  24-rain-integration-status.md  25-compensation-status.md  26-rain-integration-status.md  32-config-reset.md  33-config-status.md  ENHANCED_STRUCTS_INTERNAL.md  README.md  _fragmentation-reference.md  bulk-sync-snapshot.md
docs/ble/characteristics/: 01-valve-control.md  02-flow-sensor.md  03-system-status.md  04-channel-configuration.md  05-schedule-configuration.md  06-system-configuration.md  07-task-queue-management.md  08-statistics.md  09-rtc-configuration.md  10-alarm-status.md  11-calibration-management.md  13-diagnostics.md  14-growing-environment.md  15-current-task-status.md  16-timezone-configuration.md  README.md
docs/packs/: BLE_PACK_SERVICE.md  INTEGRATION_GUIDE.md  MOBILE_APP_GUIDE.md  PACK_SCHEMA.md  PACK_STORAGE.md  README.md  SYNC_GUIDE.md  TRANSFER_PROTOCOL.md
dts/bindings/: gpio-flow-sensor.yaml  gpio-valves.yaml
examples/configurations/: ci_cd_config.json  development_config.json  minimal_config.json
examples/scripts/: custom_test_runner.ps1  post_test_cleanup.ps1  pre_test_setup.ps1
src/: bme280_driver.c  bme280_driver.h  bt_custom_soil_handlers.c  bt_custom_soil_handlers.h  bt_environmental_history_handlers.c  bt_environmental_history_handlers.h  bt_gatt_structs.h  bt_gatt_structs_enhanced.h  bt_interval_mode_handlers.c  bt_interval_mode_handlers.h  bt_irrigation_service.c  bt_irrigation_service.h  bt_pack_handlers.c  bt_pack_handlers.h  configuration_status.c  configuration_status.h  custom_soil_db.c  custom_soil_db.h  database_flash.c  database_flash.h  enhanced_error_handling.c  enhanced_error_handling.h  enhanced_system_status.c  enhanced_system_status.h  env_sensors.c  env_sensors.h  environmental_data.c  environmental_data.h  environmental_history.c  environmental_history.h  fao56_calc.c  fao56_calc.h  fao56_custom_soil.c  fao56_custom_soil.h  flow_sensor.c  flow_sensor.h  history_flash.c  history_flash.h  interval_mode_controller.c  interval_mode_controller.h  (+70 more)
sysbuild/: mcuboot.conf  mcuboot.overlay
tools/: analyze_rom.py  api_documentation_generator.py  bossac_wrapper.bat  bossac_wrapper.py  build_all.py  build_database.py  csv2binary_flash.py  csv2irrigation_methods.py  csv2plant_full.py  csv2plant_header.py  csv2soil_enhanced.py  csv2soil_header.py  irrigation_methods_db.json  plant_db.csv  plant_db.json  plant_full_db.json  soil_enhanced_db.json  soil_table.csv  validate_db.py
